Format and optimised imports